# agent-kernel

./: .dockerignore  .gitignore  .gitmodules  ADMISSION_CHECK_DEPRECATION_PLAN.md  ARCHITECTURE.md  CLAUDE.md  CODING_STANDARDS.md  DEFECTS.md  DEFECT_REGISTRY.md  Dockerfile  GUARDRAIL_COVERAGE_0.1.md  HOST_ACTIVATION_GUIDE.md  IMPROVEMENT_PLAN.md  INTERFACES.md  LICENSE  PYTHON_TYPESCRIPT_RELATION.md  QUICKSTART.md  README.md  RELEASE_NOTES_0.1.md  ROADMAP.md  RUNBOOK_HUMAN_ESCALATION.md  V6_4_GAP_ASSESSMENT.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci-lint.yml  ci-test.yml  ci-typecheck.yml
agent_kernel/: config.py  worker_main.py
agent_kernel/adapters/agent_core/: checkpoint_adapter.py  context_adapter.py  runner_adapter.py  session_adapter.py  tool_mcp_adapter.py
agent_kernel/adapters/facade/: kernel_facade.py  workflow_gateway_adapter.py
agent_kernel/kernel/: action_type_registry.py  adapter_ports.py  branch_monitor.py  capability_snapshot.py  capability_snapshot_resolver.py  contracts.py  dedupe_store.py  event_export.py  event_registry.py  failure_code_registry.py  failure_evidence.py  idempotency_key_policy.py  minimal_runtime.py  peer_auth.py  plan_executor.py  plan_type_registry.py  reasoning_loop.py  remote_service_policy.py  remote_service_verifier.py  replay_fidelity.py  retry_executor.py  turn_engine.py
agent_kernel/kernel/admission/: snapshot_driven_admission.py
agent_kernel/kernel/cognitive/: context_port.py  inference_activity.py  llm_gateway.py  output_parser.py  script_runtime.py  script_runtime_registry.py
agent_kernel/kernel/persistence/: consistency.py  dispatch_outbox_reconciler.py  kafka_event_export.py  migrations.py  pg_circuit_breaker_store.py  pg_dedupe_store.py  pg_event_log.py  pg_recovery_outcome_store.py  pg_shared.py  ports.py  sqlite_circuit_breaker_store.py  sqlite_colocated_bundle.py  sqlite_dedupe_store.py  sqlite_event_log.py  sqlite_pool.py  sqlite_projection_cache.py  sqlite_recovery_outcome_store.py  sqlite_task_view_log.py  sqlite_turn_intent_log.py
agent_kernel/kernel/recovery/: circuit_breaker_probe.py  compensation_registry.py  gate.py  mode_registry.py  planner.py
agent_kernel/kernel/task_manager/: __init__.py  contracts.py  event_log.py  reflection_bridge.py  reflection_orchestrator.py  registry.py  restart_policy.py  watchdog.py
agent_kernel/runtime/: bundle.py  health.py  heartbeat.py  kernel_runtime.py  metrics.py  observability_hooks.py  otel_export.py
agent_kernel/service/: auth_middleware.py  http_server.py  openapi.py  serialization.py
agent_kernel/skills/: contracts.py  runtime_factory.py
agent_kernel/substrate/local/: adaptor.py
agent_kernel/substrate/temporal/: activity_gateway.py  adaptor.py  client.py  gateway.py  run_actor_workflow.py  worker.py
docs/: production-safety.md
docs/superpowers/specs/: 2026-04-08-kernel-refactor-design.md  2026-04-14-fake-impl-remediation-design.md
python_src/agent_kernel/kernel/: adapter_ports.py  capability_snapshot.py  capability_snapshot_resolver.py  contracts.py  dedupe_store.py  event_export.py  event_registry.py  minimal_runtime.py  plan_executor.py  reasoning_loop.py  turn_engine.py
python_src/agent_kernel/runtime/: bundle.py  health.py  heartbeat.py  kernel_runtime.py  observability_hooks.py  otel_export.py
python_src/agent_kernel/skills/: contracts.py
python_tests/agent_kernel/: conftest.py  test_config.py  test_testing_exports.py
python_tests/agent_kernel/adapters/: test_agent_core_adapters.py  test_agent_core_checkpoint_adapter.py  test_agent_core_context_adapter.py  test_agent_core_openjiuwen_alignment.py  test_agent_core_tool_mcp_adapter.py  test_execute_turn_facade.py  test_kernel_facade.py  test_kernel_facade_cleanup.py  test_kernel_facade_hi_agent_integration.py  test_kernel_facade_manifest.py  test_kernel_facade_task_management.py  test_kernel_facade_trace.py  test_kernel_facade_trace_consistency.py  test_kernel_facade_v2.py  test_workflow_gateway_adapter.py
python_tests/agent_kernel/contracts/: test_adapter_ports_contract.py  test_skill_interface_contract.py  test_temporal_interface_contract.py
python_tests/agent_kernel/kernel/: test_action_type_registry.py  test_admission_stability_matrix.py  test_branch_monitor.py  test_capability_snapshot.py  test_capability_snapshot_resolver.py  test_capability_snapshot_stability_matrix.py  test_dedupe_store.py  test_dedupe_store_stability_matrix.py  test_effect_class_validation.py  test_event_export.py  test_event_registry_v2.py  test_executor_routing_stability_matrix.py  test_failure_code_registry.py  test_failure_evidence.py  test_idempotency_key_policy.py  test_minimal_runtime.py  test_new_plan_contracts.py  test_plan_executor.py  test_plan_executor_cancellation.py  test_plan_executor_extended.py  test_reasoning_loop.py  test_recovery_planner.py  test_remote_service_policy.py  test_remote_service_verifier.py  test_retry_executor.py  test_round5_optimizations.py  test_round6_optimizations.py  test_round7_optimizations.py  test_round8_optimizations.py  test_sqlite_busy_timeout.py  test_sqlite_dedupe_store.py  test_sqlite_event_log.py  test_sqlite_recovery_outcome_store.py  test_sqlite_turn_intent_log.py  test_transient_error_hierarchy.py  test_turn_engine.py  test_turn_engine_reasoning.py  test_turn_engine_replay_fidelity.py  test_turn_engine_stability_matrix.py
python_tests/agent_kernel/runtime/: test_bundle.py  test_bundle_temporal_integration.py  test_drain_coordinator.py  test_health.py  test_heartbeat.py  test_kernel_runtime.py  test_metrics.py  test_observability_hooks.py  test_otel_export.py
python_tests/agent_kernel/service/: test_auth_middleware.py  test_http_server.py  test_openapi.py
python_tests/agent_kernel/skills/: test_skill_runtime_factory.py
python_tests/agent_kernel/substrate/: test_activity_gateway_cognitive.py  test_execute_turn_local.py  test_local_fsm_adaptor.py  test_run_actor_workflow.py  (+7 more)
scripts/: check_prod_safety.py
tests/integration/: cross_module_collaboration.test.ts  kernel_collaboration.test.ts
(+61 files in other folders)
