[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agent-kernel"
version = "0.2.0"
description = "Enterprise agent kernel — six-authority lifecycle protocol for durable agent runs"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
temporal = ["temporalio>=1.7"]
pg = ["asyncpg>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pylint>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_kernel"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["python_tests"]

[tool.agent_kernel.style_policy]
python_style_guide = "https://google.github.io/styleguide/pyguide.html"
enforcement = "strict"

[tool.ruff]
line-length = 100
target-version = "py314"
src = [".", "python_tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# E402 is intentional: several modules do optional-SDK detection (try/except import)
# before their main imports; suppressing globally avoids per-line noqa noise.
ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pylint.main]
py-version = "3.14"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-instance-attributes",
  "too-few-public-methods",
  "unnecessary-ellipsis",
  "too-many-arguments",
  "too-many-positional-arguments",
  "no-member",
  "duplicate-code",
  "too-many-lines",
  "trailing-newlines",
  "too-many-locals",
  "too-many-return-statements",
]
