[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agent-kernel"
version = "0.2.0"
description = "Enterprise agent kernel: six-authority lifecycle protocol for durable agent runs"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
agent-kernel-server = "agent_kernel.service.http_server:_server_main"
agent-kernel-worker = "agent_kernel.worker_main:main_sync"

[project.optional-dependencies]
temporal = ["temporalio==1.24.0"]  # vendored: external/temporal-sdk-python@1.24.0; requires Temporal Server >=1.20
pg = ["asyncpg>=0.30"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50", "tiktoken>=0.7"]
llm = ["anthropic>=0.40", "openai>=1.50", "tiktoken>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pylint>=3.2",
    "pyright>=1.1",
]

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
exclude = ["external/"]

[tool.hatch.build.targets.wheel]
packages = ["agent_kernel"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["python_tests"]

[tool.agent_kernel.style_policy]
python_style_guide = "https://google.github.io/styleguide/pyguide.html"
enforcement = "strict"

[tool.ruff]
line-length = 100
target-version = "py314"
src = [".", "python_tests"]
exclude = ["external"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# E402 is intentional: several modules do optional-SDK detection (try/except import)
# before their main imports; suppressing globally avoids per-line noqa noise.
ignore = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pylint.main]
py-version = "3.14"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-instance-attributes",
  "too-few-public-methods",
  "unnecessary-ellipsis",
  "too-many-arguments",
  "too-many-positional-arguments",
  "no-member",
  "duplicate-code",
  "too-many-lines",
  "trailing-newlines",
  "too-many-locals",
  "too-many-return-statements",
  # Intentional patterns: lazy/guarded imports and interface-conformance unused args
  "wrong-import-position",      # C0413 – imports after module-level logger init
  "import-outside-toplevel",    # C0415 – deferred imports inside functions/methods
  "import-error",               # E0401 – optional deps (openai, anthropic, asyncpg) not installed in lint env
  "unused-argument",            # W0613 – protocol conformance stubs
  "protected-access",           # W0212 – internal cross-class access within package
  "broad-exception-caught",     # W0718 – intentional catch-all in async/daemon resilience paths
  "exec-used",                  # W0122 – script_runtime uses exec() intentionally in sandboxed context
  "too-many-branches",          # R0912 – complex dispatch methods
  "too-many-public-methods",    # R0904 – KernelFacade public API surface
  "too-many-statements",        # R0915 – large consistency/reconciler functions
  "unnecessary-lambda",         # W0108 – registry lambdas are self-documenting
  "consider-using-max-builtin", # R1731 – explicit if-block for clarity
  "no-else-return",             # R1705 – existing style preference
]

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "basic"
include = ["agent_kernel"]
exclude = ["python_tests", "external"]
reportMissingImports = "warning"
reportMissingTypeStubs = false
# DB-deserialization pattern: rows come back as str; narrowing to Literal types
# happens at the domain boundary and is validated at runtime, not statically.
reportArgumentType = "warning"
# Protocol stubs and abstract bases use NotImplementedError; pyright sees
# missing return paths. Treated as warnings until stubs are replaced by impls.
reportReturnType = "warning"
# Optional chaining and dynamic attribute access on protocol objects.
reportOptionalMemberAccess = "warning"
reportGeneralTypeIssues = "warning"
reportAttributeAccessIssue = "warning"
